# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dependencies.cmake  main.cpp
examples/: CMakeLists.txt  game.cpp
include/chip8/: chip8.hpp  common.hpp  display.hpp  keyboard.hpp  proc.hpp  program.hpp
include/chip8/interface/: IDisplay.hpp  IKeyboard.hpp  IProc.hpp  IProgram.hpp
projects/chip8_manager/include/: chip8.hpp
projects/chip8_tui/: CMakeLists.txt  main.cpp
projects/chip8_tui/include/chip8_tui/: Tui.hpp  chip8.hpp  tui.hpp
projects/chip8_tui/src/: chip8.cpp  gui.cpp
src/: chip8.cpp  display.cpp  keyboard.cpp  proc.cpp  program.cpp
tests/: CMakeLists.txt  test_main.cpp  test_proc.cpp
